fix: seperate testing prompt

--- a/notebooks/mlm_filetune_test.ipynb
+++ b/notebooks/mlm_filetune_test.ipynb
@@ -260,8 +260,16 @@
     "\n",
     "print(\"Saving model...\")\n",
     "model.save_pretrained(\"./final_mpnet_mlm\")\n",
-    "tokenizer.save_pretrained(\"./final_mpnet_mlm\")\n",
-    "\n",
+    "tokenizer.save_pretrained(\"./final_mpnet_mlm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb6d4998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"\\n--- Testing the Fine-Tuned Model ---\")\n",
     "from transformers import pipeline\n",
     "\n",
