refactor: minor changes

--- a/notebooks/mlm_filetune_test.ipynb
+++ b/notebooks/mlm_filetune_test.ipynb
@@ -214,16 +214,16 @@
     "\n",
     "max_length = 256\n",
     "\n",
-    "def tokenize_function(examples):\n",
+    "def tokenize(data):\n",
     "    return tokenizer(\n",
-    "        examples[\"text\"],\n",
+    "        data[\"text\"],\n",
     "        padding=\"max_length\",\n",
     "        truncation=True,\n",
     "        max_length=max_length,\n",
     "        return_special_tokens_mask=True\n",
     "    )\n",
     "\n",
-    "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+    "tokenized_datasets = dataset.map(tokenize, batched=True)\n",
     "\n",
     "tokenized_datasets = tokenized_datasets.remove_columns([\"text\"])\n",
     "\n",
