--- a/notebooks/mlm_filetune_test.ipynb
+++ b/notebooks/mlm_filetune_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2f8d4d8d",
    "metadata": {
     "execution": {
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "# Diable WANDB logging\n",
     "import os\n",
     "os.environ[\"WANDB_DISABLED\"] = \"true\""
    ]
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bdd5ea9b",
    "metadata": {
     "execution": {
@@ -165,6 +166,7 @@
    },
    "outputs": [],
    "source": [
+    "# Import kaggle dataset\n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"/kaggle/input/wine-reviews/winemag-data-130k-v2.csv\", index_col='Unnamed: 0')\n",
     "df = preprocess_data(df)"
